--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 								<img src="./assets/images/headshot.jpg" alt="">
 								<div class="team-detail">
 									<h5 class="font-alt">I'm India!</h5>
-									<p class="font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis diam.</p>
+									<p class="font-serif">SOMETHING ABOUT YOU HERE</p>
 									<div class="team-social">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
