updates per review

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Swann - Multipurpose Template</title>
+	<title>Swann Planning</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
 	<link href="assets/css/owl.carousel.css" rel="stylesheet">
 	<link href="assets/css/animate.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">Swann</a>
+          <a class="navbar-brand" href="index.html"><img class='logo-nav' src="assets/images/logos/swann_logo_small.png">Swann Planning</a>
 			</div>
 	
 			<div class="collapse navbar-collapse" id="custom-collapse">
@@ -47,7 +48,7 @@
 					<li><a href="#totop">Home</a></li>
 					<li><a href="#about" class="section-scroll">About</a></li>
 					<li><a href="#services" class="section-scroll">Services</a></li>
-					<li><a href="#team" class="section-scroll">Team</a></li>
+					<li><a href="#hello" class="section-scroll">Hello</a></li>
 					<!--<li><a href="#journal" class="section-scroll">journal</a></li>-->
 					<li><a href="#contact" class="section-scroll">Contact</a></li>
 	
@@ -68,13 +69,13 @@
 				<li class="bg-dark-30 bg-dark" style="background-image:url(assets/images/section-1.jpg)">
 					<div class="hs-caption">
 						<div class="caption-content">
-							<div class="hs-title-size-1 font-alt mb-30">
-								DC's Premier Event Coordinator
+							<!--<div class="hs-title-size-1 font-alt mb-30">-->
+								<!--DC's Premier Event Coordinator-->
+							<!--</div>-->
+							<div class="">
+                <img src="assets/images/logos/swann_planning_logo_white_short.png">
 							</div>
-							<div class="hs-title-size-4 font-alt mb-40">
-								Swann
-							</div>
-							<a href="#about" class="section-scroll btn btn-border-w btn-round">Learn More</a>
+							<!--<a href="#about" class="section-scroll btn btn-border-w btn-round">Learn More</a>-->
 						</div>
 					</div>
 				</li>
@@ -120,7 +121,7 @@
 
 			<div class="row">
 				<h2 class="module-title story-title font-alt">The Swann Story</h2>
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="module-subtitle story font-serif">
 						Swann Planning is a full service agency providing design, planning, and production for events in Washington, D.C. and beyond. Swann
@@ -128,20 +129,20 @@
 
 						The belief behind Swann Planning is that an event concept can never be too simple to be transformed into an elegant masterpiece. Placing
 						full attention on every detail, designing an innovative style, and creating a long-lasting memory are key components of a Swann
-						event.
+						event.<br/>
+
+            Swann events are special moments for clients, but also for the agency. Swann Planning takes pride in exceeding expectations
+            through premier design, exemplary customer service, and relationships with trusted, highly-regarded vendors.
 					</div>
 
 				</div>
 
-				<div class="col-sm-5">
+				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="module-subtitle story font-serif">
-						Swann events are special moments for clients, but also for the agency. Swann Planning takes pride in exceeding expectations
-						through premier design, exemplary customer service, and relationships with trusted, highly-regarded vendors.<br>
-
 						“The goal is to conceive a moment for people that becomes an irreplaceable memory. Swann Planning strives to positively impact
 						lives not only during the event, but more importantly in the future. I truly accomplished when people take time out of their day to
-						reminisce about the amazing time they had at an event Swann Planning coordinated.”
+						reminisce about the amazing time they had at an event Swann Planning coordinated.”<br/>
 
 						- India Howard, Founder/CEO
 					</div>
@@ -267,7 +268,7 @@
 				<li class="work-item celebrations">
 					<a href="profiles/celebrations/milestones_moments.html">
 						<div class="work-image">
-							<img src="assets/images/celebrations/celebrations_3.jpg" alt="">
+							<img src="assets/images/celebrations/celebrations_1.jpg" alt="">
 						</div>
 						<div class="work-caption font-alt">
 							<h3 class="work-title">Milestones and Moments</h3>
@@ -278,6 +279,36 @@
 					</a>
 				</li>
 				<!-- Portfolio item end -->
+        <!-- Portfolio item start -->
+        <li class="work-item celebrations">
+          <a href="profiles/celebrations/celebrations_2.html">
+            <div class="work-image">
+              <img src="assets/images/celebrations/celebrations_2.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Celebrations 2</h3>
+              <div class="work-descr">
+                Celebrations
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
+        <!-- Portfolio item start -->
+        <li class="work-item celebrations">
+          <a href="profiles/celebrations/celebrations_3.html">
+            <div class="work-image">
+              <img src="assets/images/celebrations/celebrations_3.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Celebrations 3</h3>
+              <div class="work-descr">
+                Celebrations
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
 
 				<!-- Portfolio item start -->
 				<li class="work-item corporate">
@@ -294,6 +325,38 @@
 					</a>
 				</li>
 				<!-- Portfolio item end -->
+
+        <!-- Portfolio item start -->
+        <li class="work-item corporate">
+          <a href="profiles/corporate/business_2.html">
+            <div class="work-image">
+              <img src="assets/images/corporate/meetings.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Corporate 2</h3>
+              <div class="work-descr">
+                Corporate
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
+
+        <!-- Portfolio item start -->
+        <li class="work-item corporate">
+          <a href="profiles/corporate/business_3.html">
+            <div class="work-image">
+              <img src="assets/images/corporate/corp_annivers_holidays.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Corporate 3</h3>
+              <div class="work-descr">
+                Corporate
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
 
 			</ul>
 			<!-- Portfolio list end -->
@@ -457,15 +520,15 @@
 		<hr class="divider-w">
 		<!-- Divider -->
 
-		<!-- Team start -->
-		<section id="team" class="module">
+		<!-- Hello start -->
+		<section id="hello" class="module">
 			<div class="container">
 
 				<div class="row">
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">The Team</h2>
+						<h2 class="module-title font-alt">Hello</h2>
 
 					</div>
 
@@ -480,8 +543,8 @@
 							<div class="team-image">
 								<img src="./assets/images/headshot.jpg" alt="">
 								<div class="team-detail">
-									<h5 class="font-alt">I'm India!</h5>
-									<p class="font-serif">SOMETHING ABOUT YOU HERE</p>
+									<h5 class="font-serif story">I'm India!</h5>
+									<p class="font-serif story">stuff here about you</p>
 									<div class="team-social">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
@@ -491,7 +554,7 @@
 								</div>
 							</div>
 							<div class="team-descr font-alt">
-								<div class="team-name">India Howerd</div>
+								<div class="team-name">India Howard</div>
 								<div class="team-role">Founder/CEO</div>
 							</div>
 						</div>
@@ -713,7 +776,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</blockquote>
+									<blockquote class="testimonial-text font-alt">"Life is an opportunity that can be transformed into accomplishments.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -1028,6 +1091,12 @@
 								<p class="help-block text-danger"></p>
 							</div>
 
+              <div class="form-group">
+                <label class="sr-only" for="cemail">Your Email</label>
+                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="(202) 808 - 2281" required="" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
+              </div>
+
 							<div class="form-group">
 								<textarea class="form-control" id="cmessage" name="cmessage" rows="7" placeholder="Message*" required="" data-validation-required-message="Please enter your message."></textarea>
 								<p class="help-block text-danger"></p>
@@ -1166,7 +1235,7 @@
 				<div class="row">
 	
 					<div class="col-sm-6">
-						<p class="copyright font-alt">© 2015 <a href="index.html">Swann</a>, All Rights Reserved.</p>
+						<p class="copyright font-alt">© 2016 <a href="index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
 					</div>
 	
 					<div class="col-sm-6">
