--- a/profiles/celebrations/celebrations_3.html
+++ b/profiles/celebrations/celebrations_3.html
@@ -47,7 +47,7 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Celebrations 1</a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Celebrations 3</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
               <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
@@ -80,7 +80,7 @@
 
           <div class="col-sm-6 col-sm-offset-3">
 
-            <h1 class="module-title font-alt">Monumental Moments</h1>
+            <h1 class="module-title font-alt">Celebrations 3</h1>
             <div class="module-subtitle font-serif mb-0">
               “People desire to celebrate an accomplishment of a loved one as they would want others to celebrate their own. It’s a guarantee Swann Planning will coordinate each event with the same mentality.”
             </div>
@@ -101,10 +101,10 @@
 
           <div class="col-sm-12">
             <div class="portfolio-item">
-              <img class="portfolio-image" src="../../assets/images/celebrations/celebrations_1.jpg" alt="">
+              <img class="portfolio-image" src="../../assets/images/celebrations/celebrations_3.jpg" alt="">
               <div class="portfolio-overlay">
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
-                  <h1>Monumental Moments</h1>
+                  <h1>Celebrations 3</h1>
                   <p class="description">When that accomplishment occurs… a celebration is in order. Whether it’s your son’s graduation,
                       sister’s engagement, or grandparents’ 50th anniversary, Swann Planning is here to make that celebration unique and monumental.
 
