--- a/profiles/corporate/events_parties_meetings.html
+++ b/profiles/corporate/events_parties_meetings.html
@@ -18,6 +18,7 @@
   <link href="../../assets/css/owl.carousel.css" rel="stylesheet">
   <link href="../../assets/css/animate.css" rel="stylesheet">
   <link href="../../assets/css/style.css" rel="stylesheet">
+  <link href="../../assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../../index.html">Swann Planning</a>
+        <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png">Swann Planning</a>
       </div>
 
       <div class="collapse navbar-collapse" id="custom-collapse">
@@ -46,11 +47,17 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corporate 1</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
-              <li><a href="../weddings/partial_planning.html">Petite Wedding Planning</a></li>
-              <li><a href="../celebrations/milestones_moments.html">Celebrations</a></li>
-              <li><a href="../corporate/events_parties_meetings.html">Corporate</a></li>
+              <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
+              <li><a href="../weddings/petite_planning.html">Petite Wedding Planning</a></li>
+              <li><a href="../celebrations/milestones_moments.html">Celebrations 1</a></li>
+              <li><a href="../celebrations/celebrations_2.html">Celebrations 2</a></li>
+              <li><a href="../celebrations/celebrations_3.html">Celebrations 3</a></li>
+              <li><a href="../corporate/events_parties_meetings.html">Corporate 1</a></li>
+              <li><a href="../corporate/business_2.html">Corporate 2</a></li>
+              <li><a href="../corporate/business_3.html">Corporate 3</a></li>
             </ul>
           </li>
 
@@ -393,7 +400,7 @@
           <div class="row">
 
             <div class="col-sm-6">
-              <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning</a>, All Rights Reserved.</p>
+              <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
             </div>
 
             <div class="col-sm-6">
