--- a/profiles/weddings/partial_planning.html
+++ b/profiles/weddings/partial_planning.html
@@ -18,6 +18,7 @@
   <link href="../../assets/css/owl.carousel.css" rel="stylesheet">
   <link href="../../assets/css/animate.css" rel="stylesheet">
   <link href="../../assets/css/style.css" rel="stylesheet">
+  <link href="../../assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="../../index.html">Swann Planning</a>
+      <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png">Swann Planning</a>
     </div>
 
     <div class="collapse navbar-collapse" id="custom-collapse">
@@ -49,9 +50,14 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partial Wedding Planning</a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
-            <li><a href="../weddings/partial_planning.html">Petite Wedding Planning</a></li>
-            <li><a href="../celebrations/milestones_moments.html">Celebrations</a></li>
-            <li><a href="../corporate/events_parties_meetings.html">Events, Parties, & Meetings</a></li>
+            <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
+            <li><a href="../weddings/petite_planning.html">Petite Wedding Planning</a></li>
+            <li><a href="../celebrations/milestones_moments.html">Celebrations 1</a></li>
+            <li><a href="../celebrations/celebrations_2.html">Celebrations 2</a></li>
+            <li><a href="../celebrations/celebrations_3.html">Celebrations 3</a></li>
+            <li><a href="../corporate/events_parties_meetings.html">Corporate 1</a></li>
+            <li><a href="../corporate/business_2.html">Corporate 2</a></li>
+            <li><a href="../corporate/business_3.html">Corporate 3</a></li>
           </ul>
         </li>
 
@@ -95,7 +101,7 @@
 
         <div class="col-sm-12">
           <div class="portfolio-item">
-            <img class="portfolio-image" src="../../assets/images/weddings/petite_planning.jpg" alt="">
+            <img class="portfolio-image" src="../../assets/images/weddings/partial_planning.jpg" alt="">
             <div class="portfolio-overlay">
               <div class="inner-overlay col-xs-8 col-xs-offset-2">
                 <h1>Partial Wedding Planning </h1>
@@ -396,7 +402,7 @@
         <div class="row">
 
           <div class="col-sm-6">
-            <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning</a>, All Rights Reserved.</p>
+            <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
           </div>
 
           <div class="col-sm-6">
