updates per review

--- a/profiles/celebrations/milestones_moments.html
+++ b/profiles/celebrations/milestones_moments.html
@@ -39,7 +39,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png">Swann Planning</a>
+        <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png"></a>
       </div>
 
       <div class="collapse navbar-collapse" id="custom-collapse">
@@ -47,17 +47,17 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Celebrations 1</a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Milestones</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
               <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
               <li><a href="../weddings/petite_planning.html">Petite Wedding Planning</a></li>
-              <li><a href="../celebrations/milestones_moments.html">Celebrations 1</a></li>
-              <li><a href="../celebrations/celebrations_2.html">Celebrations 2</a></li>
-              <li><a href="../celebrations/celebrations_3.html">Celebrations 3</a></li>
-              <li><a href="../corporate/events_parties_meetings.html">Corporate 1</a></li>
-              <li><a href="../corporate/business_2.html">Corporate 2</a></li>
-              <li><a href="../corporate/business_3.html">Corporate 3</a></li>
+              <li><a href="../celebrations/milestones_moments.html">Milestones</a></li>
+              <li><a href="../celebrations/anniversaries.html">Anniversaries</a></li>
+              <li><a href="../celebrations/birthdays.html">Birthdays</a></li>
+              <li><a href="../corporate/holiday.html">Holiday Soiree</a></li>
+              <li><a href="../corporate/meetings.html">Meetings</a></li>
+              <li><a href="../corporate/corp_celebration.html">Monumental Celebrations</a></li>
             </ul>
           </li>
 
@@ -82,7 +82,7 @@
 
             <h1 class="module-title font-alt">Monumental Moments</h1>
             <div class="module-subtitle font-serif mb-0">
-              “People desire to celebrate an accomplishment of a loved one as they would want others to celebrate their own. It’s a guarantee Swann Planning will coordinate each event with the same mentality.”
+              “People desire to <span class="color-purple">celebrate</span> an accomplishment of a loved one... It's a guarantee Swann Planning will coordinate each event with the same <span class="color-purple">desire</span>.”
             </div>
 
           </div>
@@ -101,21 +101,13 @@
 
           <div class="col-sm-12">
             <div class="portfolio-item">
-              <img class="portfolio-image" src="../../assets/images/celebrations/celebrations_1.jpg" alt="">
+              <img class="portfolio-image" src="../../assets/images/celebrations/milestones.jpg" alt="">
               <div class="portfolio-overlay">
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Monumental Moments</h1>
-                  <p class="description">When that accomplishment occurs… a celebration is in order. Whether it’s your son’s graduation,
-                      sister’s engagement, or grandparents’ 50th anniversary, Swann Planning is here to make that celebration unique and monumental.
-
-                      Swann Planning offers services for a variety of celebrations including (but not limited to):
+                  <p class="description">
+                    Life is an opportunity that can be transformed into milestones... When that milestone occurs, a celebration is in order!
                   </p>
-                  <ul class="description list-examples">
-                    <li>Birthdays</li>
-                    <li>Graduations</li>
-                    <li>Engagements</li>
-                    <li>Anniversaries</li>
-                  </ul>
                 </div>
               </div>
 
