--- a/profiles/weddings/partial_planning.html
+++ b/profiles/weddings/partial_planning.html
@@ -39,7 +39,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png">Swann Planning</a>
+      <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png"></a>
     </div>
 
     <div class="collapse navbar-collapse" id="custom-collapse">
@@ -52,12 +52,12 @@
             <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
             <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
             <li><a href="../weddings/petite_planning.html">Petite Wedding Planning</a></li>
-            <li><a href="../celebrations/milestones_moments.html">Celebrations 1</a></li>
-            <li><a href="../celebrations/celebrations_2.html">Celebrations 2</a></li>
-            <li><a href="../celebrations/celebrations_3.html">Celebrations 3</a></li>
-            <li><a href="../corporate/events_parties_meetings.html">Corporate 1</a></li>
-            <li><a href="../corporate/business_2.html">Corporate 2</a></li>
-            <li><a href="../corporate/business_3.html">Corporate 3</a></li>
+            <li><a href="../celebrations/milestones_moments.html">Milestones</a></li>
+            <li><a href="../celebrations/anniversaries.html">Anniversaries</a></li>
+            <li><a href="../celebrations/birthdays.html">Birthdays</a></li>
+            <li><a href="../corporate/holiday.html">Holiday Soiree</a></li>
+            <li><a href="../corporate/meetings.html">Meetings</a></li>
+            <li><a href="../corporate/corp_celebration.html">Monumental Celebrations</a></li>
           </ul>
         </li>
 
@@ -82,7 +82,7 @@
 
           <h1 class="module-title font-alt">Partial Wedding Planning</h1>
           <div class="module-subtitle font-serif mb-0">
-            “The joining of two people in love, who yearn to be with each other forever seems like a fairytale… Swann Planning transforms that fairytale into reality in many ways."
+            "Swann Planning <span class="color-purple">views</span> clients' many ideas as a puzzle... Then intricately places them together to create a beautiful <span class="color-purple">picture</span>."
           </div>
 
         </div>
