--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">“Couples make a choice to stay in love forever, and <span class="color-purple">Swann Planning</span> chooses to showcase this love to everyone.</blockquote>
+									<blockquote class="testimonial-text font-serif">“Couples make a choice to stay in love forever, and <span class="color-purple">Swann Planning</span> chooses to showcase this love to everyone.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -490,7 +490,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">“If people have <span class="color-purple">trust</span> for your business, they will do business with you.</blockquote>
+									<blockquote class="testimonial-text font-serif">“If people have <span class="color-purple">trust</span> for your business, they will do business with you.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -529,7 +529,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">““The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>.</blockquote>
+									<blockquote class="testimonial-text font-serif">““The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -568,7 +568,7 @@
               <div class="row">
 
                 <div class="col-sm-8 col-sm-offset-2">
-                  <blockquote class="testimonial-text font-alt">“With years of experience, coordinating events for companies are <span class="color-purple">successful</span> when the clients have faith in my ability.</blockquote>
+                  <blockquote class="testimonial-text font-serif">“With years of experience, coordinating events for companies are <span class="color-purple">successful</span> when the clients have faith in my ability.</blockquote>
                 </div>
 
               </div><!-- .row -->
