updates per final review

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 							<!--<div class="hs-title-size-1 font-alt mb-30">-->
 								<!--DC's Premier Event Coordinator-->
 							<!--</div>-->
-							<div class="">
-                <img src="assets/images/logos/swann_planning_logo_white_short.png">
-							</div>
+              <div id="transform">
+                <img class="purple-transform" src="assets/images/logos/swann_planning_logo_dark_purple_short.png">
+                <img class="white-transform" src="assets/images/logos/swann_planning_logo_white_short.png">
+              </div>
 							<!--<a href="#about" class="section-scroll btn btn-border-w btn-round">Learn More</a>-->
 						</div>
 					</div>
@@ -120,7 +121,7 @@
 		<section id="about" class="about-section about-parallax ">
 
 			<div class="row">
-				<h2 class="module-title story-title font-alt">The Swann Story</h2>
+				<h2 class="module-title story-title font-alt">Swann Story</h2>
 				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="module-subtitle story font-serif">
@@ -140,8 +141,7 @@
 				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="module-subtitle story font-serif">
-						“The goal is to conceive a moment for people that becomes an irreplaceable memory. Swann Planning strives to positively impact
-						lives not only during the event, but more importantly in the future. I truly accomplished when people take time out of their day to
+						“Swann Planning strives to positively impact lives not only during the event, but more importantly in the future. I feel truly accomplished when people take time out of their day to
 						reminisce about the amazing time they had at an event Swann Planning coordinated.”<br/>
 
 						- India Howard, Founder/CEO
@@ -314,7 +314,7 @@
 				<li class="work-item corporate">
 					<a href="profiles/corporate/holiday.html">
 						<div class="work-image">
-							<img src="assets/images/corporate/corp_annivers_holidays.jpg" alt="">
+							<img src="assets/images/corporate/corp_retreats.jpg" alt="">
 						</div>
 						<div class="work-caption font-alt">
 							<h3 class="work-title">Holiday Soiree</h3>
@@ -330,7 +330,7 @@
         <li class="work-item corporate">
           <a href="profiles/corporate/meetings.html">
             <div class="work-image">
-              <img src="assets/images/corporate/corp_retreats.jpg" alt="">
+              <img src="assets/images/corporate/corp_annivers_holidays.jpg" alt="">
             </div>
             <div class="work-caption font-alt">
               <h3 class="work-title">Meetings</h3>
@@ -396,28 +396,62 @@
 				<div class="row">
 
 					<!-- Team item star -->
-					<div class="col-sm-6 col-md-4 col-md-offset-4 mb-sm-20 wow fadeInUp">
-
-						<div class="team-item">
+					<!--<div class="col-sm-6 col-md-3 col-md-offset-4 mb-sm-20 wow fadeInUp">-->
+					<div class="col-sm-6 col-md-offset-2 col-md-3 mb-sm-20 wow fadeInUp">
+            <div class="team-item">
+              <!-- Uncomment '.team-image` styles after adding social media back -->
 							<div class="team-image">
-								<img src="./assets/images/headshot.jpg" alt="">
+								<img src="./assets/images/swann_profile_photos/swann_photo_1.jpg" alt="">
 								<div class="team-detail">
-									<h5 class="font-serif story">I'm India!</h5>
-									<p class="font-serif story">stuff here about you</p>
-									<div class="team-social">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</div>
+									<!--<h5 class="font-serif story">I'm India!</h5>-->
+									<!--<p class="font-serif story">stuff here about you</p>-->
+									<!--<div class="team-social">-->
+										<!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+										<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+										<!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
+										<!--<a href="#"><i class="fa fa-skype"></i></a>-->
+									<!--</div>-->
 								</div>
 							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name color-purple">India Howard</div>
-								<div class="team-role">Swann Planning Founder</div>
-							</div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp">
+            <div class="team-item">
+              <div class="team-image">
+                <img src="./assets/images/swann_profile_photos/swann_photo_2.png" alt="">
+                <div class="team-detail">
+                  <!--<h5 class="font-serif story">I'm India!</h5>-->
+                  <!--<p class="font-serif story">stuff here about you</p>-->
+                  <!--<div class="team-social">-->
+                  <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-skype"></i></a>-->
+                  <!--</div>-->
+                </div>
+              </div>
+              <div class="team-descr font-alt">
+                <div class="team-name color-purple strong large-text">India Howard</div>
+                <div class="team-role large-text">Swann Planning Founder</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp">
+            <div class="team-item">
+              <div class="team-image">
+                <img src="./assets/images/swann_profile_photos/swann_photo_3.jpg" alt="">
+                <div class="team-detail">
+                  <!--<h5 class="font-serif story">I'm India!</h5>-->
+                  <!--<p class="font-serif story">stuff here about you</p>-->
+                  <!--<div class="team-social">-->
+                  <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
+                  <!--<a href="#"><i class="fa fa-skype"></i></a>-->
+                  <!--</div>-->
+                </div>
+              </div>
 						</div>
-
 					</div>
 					<!-- Team item end -->
 
@@ -490,7 +524,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-serif">“If people have <span class="color-purple">trust</span> for your business, they will do business with you.</blockquote>
+									<blockquote class="testimonial-text font-serif">"Swann events thrive from clients' imagination, which <span class="color-purple">transforms</span> into endless and exciting possibilities.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -529,7 +563,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-serif">““The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>.</blockquote>
+									<blockquote class="testimonial-text font-serif">"The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -568,7 +602,7 @@
               <div class="row">
 
                 <div class="col-sm-8 col-sm-offset-2">
-                  <blockquote class="testimonial-text font-serif">“With years of experience, coordinating events for companies are <span class="color-purple">successful</span> when the clients have faith in my ability.</blockquote>
+                  <blockquote class="testimonial-text font-serif">"After years of experience, the best lesson is that events are <span class="color-purple">successful</span> when clients have the utmost faith in my capability.</blockquote>
                 </div>
 
               </div><!-- .row -->
@@ -597,7 +631,7 @@
 		<!-- Testimonials end -->
 
 		<!-- Contact start -->
-		<section id="contact" class="module">
+		<section id="contact" class="module min-padding-bottom">
 			<div class="container">
 
 				<div class="row">
@@ -630,7 +664,7 @@
 
               <div class="form-group">
                 <label class="sr-only" for="cemail">Your Email</label>
-                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="(202) 808 - 2281" required="" data-validation-required-message="Please enter your phone number.">
+                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="YOUR PHONE NUMBER" required="" data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
 
@@ -644,6 +678,8 @@
 							</div>
 
 						</form>
+
+            <img src="assets/images/logos/swann_logo_color.jpg" alt="Swann Planning Color Logo">
 
 						<!-- Ajax response -->
 						<div id="contact-response" class="ajax-response font-alt"></div>
