--- a/index.html
+++ b/index.html
@@ -693,9 +693,9 @@
 		<!-- Contact end -->
 
 		<!-- Map start -->
-		<section id="map-section">
-			<div id="map"></div>
-		</section>
+		<!--<section id="map-section">-->
+			<!--<div id="map"></div>-->
+		<!--</section>-->
 		<!-- Map end -->
 
 		<!-- Widgets start -->
